# ProgramacaoCompetitiva

./: .gitignore  CMakeLists.txt  README.md
A-WeirdAlgorithm/: Q1  Q1.cpp
C-MissingNumber/: Q3.cpp
E-Repetitions/: Q5  Q5.cpp
Lista01_10-04-26/B-Election/: Q2.cpp
Lista01_10-04-26/C-MissingNumber/: Q3
Lista01_10-04-26/D-ProblemStatement/: Q4  Q4.cpp
Lista02_17-04-26/: Q1
Lista02_17-04-26/A-IncreasingArray/: Q1.cpp
Lista03_08-05-26/A-Fase/: Q1.cpp
Lista03_08-05-26/B-Mapping/: Q2  Q2.cpp
Lista03_08-05-26/C-Fila/: Q3  Q3.cpp
