cmake_minimum_required(VERSION 4.2)
project(ProgramacaoCompetitiva)

set(CMAKE_CXX_STANDARD 17)

add_executable(ProgramacaoCompetitiva
        Lista01_10-04-26/A-WeirdAlgorithm/Q1.cpp
        Lista01_10-04-26/B-Election/Q2.cpp
        Lista01_10-04-26/C-MissingNumber
        Lista01_10-04-26/D-ProblemStatement
        Lista01_10-04-26/E-Repetitions
        Lista02_17-04-26/A-IncreasingArray)
